Stop showing Pilcrow on small screens

--- a/static/styles/components/_index-item.scss
+++ b/static/styles/components/_index-item.scss
@@ -6,15 +6,17 @@
     position: relative;
     margin-bottom: 0.25rem;
 
-    &::before {
-      content: "¶";
-      opacity: 0;
-      position: absolute;
-      left: -1em;
-      top: 0;
-      color: $mid-gray;
-      will-change: opacity;
-      transition: opacity 200ms ease;
+    @include breakpoint(medium) {
+      &::before {
+        content: "¶";
+        opacity: 0;
+        position: absolute;
+        left: -1em;
+        top: 0;
+        color: $mid-gray;
+        will-change: opacity;
+        transition: opacity 200ms ease;
+      }
     }
   }
 
@@ -43,10 +45,11 @@
     }
   }
 
-
-  &:hover &__heading::before,
-  &:focus &__heading::before {
-    opacity: 0.75;
+  @include breakpoint(medium) {
+    &:hover &__heading::before,
+    &:focus &__heading::before {
+      opacity: 0.75;
+    }
   }
 
   &:hover &__author__avatar,
